Vpc_aws.tf
resource "aws_vpc" "vpc_main" {
  cidr_block = "10.0.0.0/24"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    Name = "MY_VPC"
  }
}
